<resources>
    <string name="app_name">ESP32 Device Hub</string>
    <string name="add_device">Add Device</string>
    <string name="edit_device">Edit Device</string>
    <string name="device_name_hint">Device name (e.g. Living Room ESP32)</string>
    <string name="device_ip_hint">IP address (e.g. 192.168.1.50)</string>
    <string name="use_https">Use HTTPS</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="no_devices_hint">No devices yet.\nTap the + button to add your first ESP32 device.</string>
    <string name="error_required">This field is required</string>
    <string name="device_added">Device added</string>
    <string name="device_updated">Device updated</string>
    <string name="delete_device_title">Delete device?</string>
    <string name="delete_device_message">Remove \"%1$s\" from your list?</string>
    <string name="connection_error">Could not connect to %1$s.\n\nMake sure your phone is on the same Wi-Fi network as the device, and that the IP address is correct.\n\nPull down to retry.</string>
</resources>
